<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/your_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/colorTextAndTint" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textSize="14sp"
        android:textColor="?attr/colorTextAndTint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/your_password"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/colorTextAndTint" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:inputType="textPassword"
        android:textColor="?attr/colorTextAndTint"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/your_phone"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/colorTextAndTint" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textColor="?attr/colorTextAndTint"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/regBtn"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:gravity="center"
        android:text="@string/registration"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>