<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:background="?attr/colorNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_margin"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:src="@drawable/placeholder"
            app:tint="?attr/colorTextAndTint" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorTextAndTint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="?attr/colorTextAndTint" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="?attr/colorTextAndTint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_role"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="?attr/colorTextAndTint" />

        <TextView
            android:id="@+id/userRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="?attr/colorTextAndTint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:id="@+id/logoutBtn"
            android:background="@drawable/background_button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:gravity="center"
            android:text="@string/logout"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>
</LinearLayout>